unpackaged/main/default/objects/n2de__Async_assigner_job__c/n2de__Async_assigner_job__c.object-meta.xml
<CustomObject>
    <label>Async assigner job</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Async assigner jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>