unpackaged/main/default/objects/n2de__Async_assigner_job__c/fields/n2de__Error_message__c.field-meta.xml
<CustomField>
    <fullName>n2de__Error_message__c</fullName>
    <label>Assigner exception error message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>