unpackaged/main/default/objects/n2de__Async_assigner_job__c/fields/n2de__Error_status_code__c.field-meta.xml
<CustomField>
    <fullName>n2de__Error_status_code__c</fullName>
    <label>Assigner exception error code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>