unpackaged/main/default/objects/n2de__Async_assigner_job__c/fields/n2de__Job_id__c.field-meta.xml
<CustomField>
    <fullName>n2de__Job_id__c</fullName>
    <label>Assigner queueable job id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>