unpackaged/main/default/objects/n2de__Async_assigner_job__c/fields/n2de__Job_type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Job_type__c</fullName>
    <label>Type of the assigner job</label>
    <length>255</length>
    <type>Text</type>
</CustomField>