unpackaged/main/default/objects/n2de__Async_assigner_job__c/fields/n2de__Status__c.field-meta.xml
<CustomField>
    <fullName>n2de__Status__c</fullName>
    <description>Status of the assigner job</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>